# usdx-dl

./: .editorconfig  .env  .gitattributes  .gitignore  LICENSE  README.md  build_hooks.py  pyproject.toml
.githooks/: pre-commit
data/: usdx-dl.desktop
usdx_dl/: __init__.py  __main__.py  ansi.py  config.py  ffmpeg.py  flops.py  fmt.py  fmt_test.py  func_utils.py  func_utils_test.py  hyphens.py  interactive.py  lang.py  lyrics.py  models.py  platform_utils.py  progress.py  required_tools.py  required_tools_test.py  silence.py  speedtest.py  swift_f0.py  syllables.py  sys_utils.py  types.py  usdb.py  usdx.py  usdx_format.py  whisper.py  youtube.py
usdx_dl/cli/: __init__.py  args.py  config.py  download.py  gui.py  list.py  main.py  web.py
usdx_dl/inference/: fasttext_np.py  fasttext_np_test.py
usdx_dl/web/: __init__.py  api.py  assets.py  state.py  worker.py  ws.py
usdx_dl/web/ui/: .gitignore  .oxlintrc.json  .prettierrc.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
usdx_dl/web/ui/src/: App.vue  style.css
usdx_dl/web/ui/src/components/: AppInstructions.vue  AppSettings.vue  MusicBars.vue  QueueItem.vue  ScrollContainer.vue  SongCard.vue  SongsFolder.vue  ThemeSwitcher.vue  UsdbCookie.vue  store.ts
usdx_dl/web/ui/src/components/parts/: BorderBeam.vue  MusicBars.vue  QueueItem.vue  QueueSkeleton.vue  SongCard.vue  index.ts
usdx_dl/web/ui/src/components/settings/: DownloadTools.vue  SongsFolder.vue  ThemeSwitcher.vue  index.ts
usdx_dl/web/ui/src/components/tabs/: TabInstructions.vue  TabLogs.vue  TabQueue.vue  TabSettings.vue  TabSongs.vue  index.ts
usdx_dl/web/ui/src/components/ui/badge/: Badge.vue  index.ts
usdx_dl/web/ui/src/components/ui/button/: Button.vue  index.ts
usdx_dl/web/ui/src/components/ui/button-group/: ButtonGroupSeparator.vue  ButtonGroupText.vue  index.ts
usdx_dl/web/ui/src/components/ui/collapsible/: Collapsible.vue  CollapsibleContent.vue  CollapsibleTrigger.vue
usdx_dl/web/ui/src/components/ui/input/: Input.vue
usdx_dl/web/ui/src/components/ui/label/: Label.vue
usdx_dl/web/ui/src/components/ui/radio-group/: RadioGroup.vue  RadioGroupItem.vue
usdx_dl/web/ui/src/components/ui/separator/: Separator.vue
usdx_dl/web/ui/src/components/ui/switch/: Switch.vue
usdx_dl/web/ui/src/components/ui/tabs/: TabContent.vue  TabLink.vue  TabList.vue  TabTrigger.vue  Tabs.vue  index.ts
usdx_dl/web/ui/src/components/ui/textarea/: Textarea.vue
usdx_dl/web/ui/src/lib/: ansi.ts  cmp.ts  host.ts  markdown.ts  utils.ts  vue-utils.ts
usdx_dl/web/ui/src/pages/: Main.vue  Setup.vue  index.ts
usdx_dl/web/ui/src/store/: errors.ts  logs.ts  nav.ts  settings.ts  songs.ts  state.ts  tools.ts  usdb.ts  websocket.ts
usdx_dl/web/ui/src/types/: api.d.ts
