[project]
name = "usdx-dl"
version = "0.1.0"
description = "Download song files for UltraStar Deluxe."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "audio-separator~=0.44",
    "fastapi[standard]==0.138.0",
    "librosa",
    "num2words",
    "onnxruntime",
    "platformdirs",
    "pyhyphen",
    "pywebview[qt,ssl]",
    "swift-f0",
    "torch",
    "torchaudio",
    "torchvision",
    "watchdog",
    "whisperx~=3.8",
    "yt-dlp",
]

[project.optional-dependencies]
dev = ["black", "hatchling", "mypy", "pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "build_hooks.py"

[tool.hatch.build.targets.sdist]
exclude = [".vscode", "usdx_dl/web/ui/node_modules"]

[tool.hatch.build.targets.wheel]
packages = ["usdx_dl"]
exclude = ["usdx_dl/web/ui/node_modules"]

[project.scripts]
usdx-dl = "usdx_dl.__main__:main"

[tool.uv]
index-strategy = "unsafe-best-match"
override-dependencies = [
    "numba>=0.60.0",
    "torch~=2.12.0",
    "torchaudio~=2.11.0",
    "torchvision~=0.27.0",
    "torchcodec~=0.14.0",
]
torch-backend = "auto"

[tool.pytest]
cache_dir = ".cache/pytest"

[tool.mypy]
cache_dir = ".cache/mypy"

[[tool.mypy.overrides]]
module = [
    "whisperx.*",
    "swift_f0.*",
    "audio_separator.*",
    "soundfile.*",
    "num2words.*",
    "hyphen.*",
]
follow_untyped_imports = true
