[project]
name = "usdx-dl"
version = "0.1.0"
description = "Download song files for UltraStar Deluxe."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "audio-separator~=0.44",
    "cryptography",
    "fastapi[standard]==0.138.0",
    "librosa",
    "num2words",
    "onnxruntime",
    "platformdirs",
    "pyhyphen",
    "pyside6",
    "pywebview",
    "qtpy",
    "swift-f0",
    "torch",
    "torchaudio",
    "torchvision",
    "watchdog",
    "whisperx~=3.8",
    "yt-dlp[default]",
]

[project.optional-dependencies]
dev = ["black", "hatchling", "mypy", "pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [".vscode"]
artifacts = ["usdx_dl/web/dist/**"]

[tool.hatch.build.targets.wheel]
packages = ["usdx_dl"]
exclude = [".vscode"]
artifacts = ["usdx_dl/web/dist/**"]

[project.scripts]
usdx-dl = "usdx_dl.__main__:main"

[tool.uv]
index-strategy = "unsafe-best-match"
override-dependencies = [
    "beartype>=0.22.9",
    "numba>=0.60.0",
    "torch~=2.12.0",
    "torchaudio~=2.11.0",
    "torchvision~=0.27.0",
    "torchcodec~=0.14.0",
]
torch-backend = "auto"

[tool.ruff]
cache-dir = ".cache/ruff"

[tool.pytest]
cache_dir = ".cache/pytest"
markers = ["slow: marks tests as slow"]

[tool.mypy]
cache_dir = ".cache/mypy"

[[tool.mypy.overrides]]
module = [
    "whisperx.*",
    "swift_f0.*",
    "audio_separator.*",
    "soundfile.*",
    "num2words.*",
    "hyphen.*",
    "tqdm.*",
    "yt_dlp.*",
]
follow_untyped_imports = true
